Kapitel 6 fertig und Fehlerverbesserung

--- a/preamble.tex
+++ b/preamble.tex
@@ -93,7 +93,11 @@
 \newcommand{\p}{\mathcal{P}}
 \newcommand{\LM}{\mathcal{M}}
 \newcommand{\LI}{\mathcal{L}_I}
+\newcommand{\LNI}{\mathcal{L}_{N,I}}
 \newcommand{\LE}{\mathcal{L}_E}
+\newcommand{\Leins}{\mathcal{L}_1}
+\newcommand{\Lzwei}{\mathcal{L}_2}
+\newcommand{\LNE}{\mathcal{L}_{N,E}}
 \newcommand{\LL}{\mathcal{L}}
 \newcommand{\op}{\operatorname}
 \newcommand{\prob}[1][\mu]{\big(P(#1)\big)}
@@ -103,6 +107,7 @@
 \newcommand{\pdprob}[1][\mu]{\big(P_N'(#1)\big)}
 \newcommand{\refprob}[1][\mu]{\big(\hat P(#1)\big)}
 \newcommand{\eprob}[1][\mu]{\big(E(#1)\big)}
+\newcommand{\erprob}[1][\mu]{\big(E_N(#1)\big)}
 \newcommand{\set}[1]{\left\{#1\right\}}
 \newcommand{\spn}{\operatorname{span}}
 \newcommand{\seq}[1]{\left(#1\right)}
