--- a/section4.tex
+++ b/section4.tex
@@ -12,16 +12,16 @@ Es folgt zunächst eine allgemeine Approximationsmethode für parametrische Funk
 
 \begin{itemize}
 	\item § \ref{sec-3} zeigte Relevanz der separierbaren Parameterabhängigkeit für effiziente Offline/Online-Zerlegung und Glattheit der Lösung $u(\mu)$ bzgl. $\mu$.
-	\item Gesucht: Approximationsverfahren für parametrische Funktion
+	\item Gesucht: Approximationsverfahren für parametrische Funktionen
 	\[
 		g: \Omega \times \p \rightarrow \R
 	\]
 	der Form
 	\[
-		g(x;\mu) \approx I_{\mu} (g(\pdot;\mu))(x) = \sum\limits_{m=1}^M \Theta_g^m(\mu) g^m(x)
+		g(x;\mu) \approx I_{M} (g(\pdot;\mu))(x) = \sum\limits_{m=1}^M \Theta_g^m(\mu) g^m(x)
 	\]
-	mit skalaren Funktionen $\Theta_g^m(\mu)$ und ``kollaterale reduzierter Basis'' $Q_{\mu} = \{g^m\}_{m=1}^M$
-	\item Statt allg. approx. Räume (z.\,B. FEM-Räume, zu hohe Dimension) oder Taylor-Ansatz (nur lokale Approx.) wird wieder Snapshot-basierter Ansatz gewählt, d.\,h. $Q_M \subset \op{span} \{g(\pdot,\mu)|_{\mu \in S_{train} \subset \p} \}$
+	mit skalaren Funktionen $\Theta_g^m(\mu)$ und ``kollaterale reduzierter Basis'' $Q_{M} = \{g^m\}_{m=1}^M$
+	\item Statt allg. approx. Räume (z.\,B. FEM-Räume, zu hohe Dimension) oder Taylor-Ansatz (nur lokale Approx.) wird wieder Snapshot-basierter Ansatz gewählt, d.\,h. $Q_M \subseteq \op{span} \{g(\pdot,\mu)|_{\mu \in S_{train} \subset \p} \}$
 	\item Die empirische Interpolation ist eine Mögllichkeit. Details finden sich in
 	\begin{itemize}
 		\item [BMNP04] Barrault, Maday, Nguyen, Patera: An ‘empirical interpolation’ method: application to efficient reduced-basis discretization of partial differential equations
@@ -30,7 +30,7 @@ Es folgt zunächst eine allgemeine Approximationsmethode für parametrische Funk
 \end{itemize}
 
 \begin{defn}[Empirische Interpolation] \label{4.1}
-	Sei $G \subset C^0(\bar{\Omega},\R)$ Menge von zu interpolierenden Funktionen. Für $\mu \in \N$, $M \leq \dim(\op{span}(G))$ definiere rekursiv Interpolationspunktemenge $T_{\mu} \subset \bar{\Omega}$ und die kollaterale Basis $Q_{\mu} \subset \op{span} (G)$
+	Sei $G \subset C^0(\bar{\Omega},\R)$ Menge von zu interpolierenden Funktionen. Für $M \in \N$, $M \leq \dim(\op{span}(G))$ definiere rekursiv Interpolationspunktemenge $T_{M} \subset \bar{\Omega}$ und die kollaterale Basis $Q_{M} \subset \op{span} (G)$
 	\begin{align*}
 	M = 1: \tilde{q}_1 &:= \op{argmax}_{g \in G} ||g||_{\infty} \\
 	x_1 &:= \op{argmax}_{x \in \bar{\Omega}} |\tilde{q}_1 (x)| \\
@@ -43,10 +43,10 @@ Es folgt zunächst eine allgemeine Approximationsmethode für parametrische Funk
 	r_M &:= \tilde{q}_M - I_{M-1} \tilde{q}_M \\
 	x_M &:= \op{argmax}_{x \in \bar{\Omega}} |r_M (x)| \\
 	T_M &:= T_{M-1} \cup \{x_M\} \\
-	q_M &:= \frac{r_M}{r_M (x_{\mu}} \\
+	q_M &:= \frac{r_M}{r_M (x_{M})} \\
 	Q_M &:= Q_{M-1} \cup \{ q_M \}
 	\end{align*}
-	wobei $I_M : C^0(\bar{\Omega},\R) \rightarrow \op{span}(Q_{\mu})$ den Interpolationsparameter zu Punkten $T_M$ bezeichnet, d.\,h. $I_M(g)(x_i) = g(x_i) \,\, \forall \,\, g \in C^0(\bar{\Omega},\R)$, $i=1,\dots,M$.
+	wobei $I_M : C^0(\bar{\Omega},\R) \rightarrow \op{span}(Q_{\mu})$ den Interpolationsoperator zu Punkten $T_M$ bezeichnet, d.\,h. $I_M(g)(x_i) = g(x_i) \,\, \forall \,\, g \in C^0(\bar{\Omega},\R)$, $i=1,\dots,M$.
 \end{defn}
 
 \begin{bem} \beginwithlistbem
@@ -66,36 +66,36 @@ Es folgt zunächst eine allgemeine Approximationsmethode für parametrische Funk
 		Für analytische Untersuchungen wird später die nodale Basis $\zeta_M \subset \op{span} (Q_M)$ zu Knoten $T_M$ betrachtet, welche jedoch nicht mehr hierarchisch sind, d.\,h. $\zeta_{M-1} \not\subseteq \zeta_M$
 		\item Die Erzeugung von $Q_M$ und $T_M$ kann als Greedy-Minimierungsstrategie  für
 		
-		 $\min\limits_{\substack{X_M \subset \op{span}(G) \\ \dim(X_M) = M \\ T_M \subset \bar{\Omega} \\ |T_M| = M}} \max\limits_{g \in G} ||g - I_M (g) ||_{\infty}$ interpretiert werden.
+		 $\min\limits_{\substack{X_M \subseteq \op{span}(G) \\ \dim(X_M) = M \\ T_M \subset \bar{\Omega} \\ |T_M| = M}} \max\limits_{g \in G} ||g - I_M (g) ||_{\infty}$ interpretiert werden.
 		
 		Es kann jedoch kein monotoner Fehlerabfall garantiert werden.
 	\end{itemize}
 \end{bem}
 
 \begin{satz}[Berechnung der Interpolation]
-Seien $T_M = \{x_1,\dots,x_M\}$ und $Q_M = \{q_1,\dots,q_M\}$ gemäß Def. \ref{4.1} gegeben. Dann ist die Matrix $\underline{Q}_M := (\underline{q}_j(x_i))_{i,j=1}^M \in \R^{M \times M}$ eine untere Dreiecksmatrix mit 1-Diagonale, also regulär.
+Seien $T_M = \{x_1,\dots,x_M\}$ und $Q_M = \{q_1,\dots,q_M\}$ gemäß Def. \ref{4.1} gegeben. Dann ist die Matrix $\underline{Q}_M := (q_j(x_i))_{i,j=1}^M \in \R^{M \times M}$ eine untere Dreiecksmatrix mit 1-Diagonale, also regulär.
 Sei $g \in C^0 (\bar{\Omega},\R), \underline{g}_M = (g(x_i))_{i=1}^M \in \R^M, \underline{\alpha}_M := (\alpha_i)_{i=1}^M \in \R^M$ Lösung von
 \[
-	\underline{Q}_M \underline{\alpha}_M = \underline{g}_M
+	\underline{Q}_M \underline{\alpha}_M = g_M
 \]
 Dann ist die Interpolierte von $g$ gerade
 \begin{align} \label{eq:4.1}
-I_M (g) = \sum\limits_{i=1}^M \alpha_i \underline{q}_i
+I_M (g) = \sum\limits_{i=1}^M \alpha_i q_i
 \end{align}
 \begin{proof}
 Seien $i,j = 1,\dots,M$
 \begin{align*}
-&i=j: (\underline{Q}_M)_{ii} = \underline{q}_i(x_i) = \frac{r_i(x_i)}{r_i(x_i)} = 1 \\
-&j>i: (\underline{Q}_M)_{ij} = \underline{q}_j(x_i) = \frac{r_j(x_i)}{r_i(x_j)} = 0 \\
-&\text{weil } r_j(x_i) = \underline{\tilde{q}}^{(x_i)} - I_{j-1}(\underline{\tilde{q}}_j)(x_i) = 0 \text{ da } I_{j-1} \text{ Interpolierende zu } T_{j-1} \text{ und } x_i \in T_{j-1}.
+&i=j: (\underline{Q}_M)_{ii} = q_i(x_i) = \frac{r_i(x_i)}{r_i(x_i)} = 1 \\
+&j>i: (\underline{Q}_M)_{ij} = q_j(x_i) = \frac{r_j(x_i)}{r_i(x_j)} = 0 \\
+&\text{weil } r_j(x_i) = \tilde{q}(x_i) - I_{j-1}(\tilde{q}_j)(x_i) = 0 \text{ da } I_{j-1} \text{ Interpolierende zu } T_{j-1} \text{ und } x_i \in T_{j-1}.
 \end{align*}
 Also $\underline{Q}_M$ untere Dreiecksmatrix mit 1-Diagonale.
 
-Für \ref{eq:4.1} zeige Übereinstimmung von beiden Seiten in allen Interpolationspunkten $T_M$:
+Für (\ref{eq:4.1}) zeige Übereinstimmung von beiden Seiten in allen Interpolationspunkten $T_M$:
 
 Für $i=1,\dots,M$ ist
 \[
-	\sum\limits_{j=1}^M \alpha_j \underline{q}_j(x_i) = \sum\limits_{j=1}^M \alpha_j (\underline{Q}_M)_{ij} = (\underline{Q}_M \underline{\alpha}_M)_i = (g_M)_i = g(x_i) = I_M(g)(x_i)
+	\sum\limits_{j=1}^M \alpha_j q_j(x_i) = \sum\limits_{j=1}^M \alpha_j (\underline{Q}_M)_{ij} = (\underline{Q}_M \underline{\alpha}_M)_i = (\underline{g}_M)_i = g(x_i) = I_M(g)(x_i)
 \]
 \end{proof}
 \end{satz}
@@ -109,38 +109,38 @@ Sie $G= \{1,x,x^2\}$ Monome auf $\bar{\Omega} = [-1,1]$.
 \end{figure}
 Dann ist
 \[
-	\underline{\tilde{q}}_1 := \op{argmax}\limits_{g \in G} ||g||_{\infty} \text{ beliebig, z.\,B. } \underline{\tilde{q}}_1(x) = 1
+	\tilde{q}_1 := \op{argmax}\limits_{g \in G} ||g||_{\infty} \text{ beliebig, z.\,B. } \tilde{q}_1(x) = 1
 \]
 und
 \[
-	x_1 = \op{argmax}_{x \in [-1,1]} |\underline{\tilde{q}}_1(x) \text{ beliebig, z.\,B. } x_1 = -1
+	x_1 = \op{argmax}_{x \in [-1,1]} |\tilde{q}_1(x)| \text{ beliebig, z.\,B. } x_1 = -1
 \]
 somit ergibt sich 
 \[
-\underline{q}_1(x) = \frac{\underline{\tilde{q}}_1(x)}{\underline{\tilde{q}}_1(x_1)} = 1
+q_1(x) = \frac{\tilde{q}_1(x)}{\tilde{q}_1(x_1)} = 1
 \]
 Dann ist
 \[
-	\underline{\tilde{q}}_2 := \op{argmax}\limits_{g \in G} ||g - I_1(g)||_{\infty} = x,
+	\tilde{q}_2 := \op{argmax}\limits_{g \in G} ||g - I_1(g)||_{\infty} = x,
 \]
 \[
-	r_2 = \underline{\tilde{q}}_2 - I_1(\underline{\tilde{q}}_2) = x + 1,
+	r_2 = \tilde{q}_2 - I_1(\tilde{q}_2) = x + 1,
 \]
 \[
 	x_2 := \op{argmax}\limits_{x \in [-1,1]} |r_2(x)| = 1 \text{ und }
 \]
 \[
-	\underline{q}_2(x) = \frac{r_2(x)}{r_2(x_2)} = \frac{1}{2} (x+1)
+	q_2(x) = \frac{r_2(x)}{r_2(x_2)} = \frac{1}{2} (x+1)
 \]
 schließlich
 \[
-	\underline{\tilde{q}}_3 := \op{argmax}\limits_{g \in G} ||g - I_2(g)||_{\infty} = x^2
+	\tilde{q}_3 := \op{argmax}\limits_{g \in G} ||g - I_2(g)||_{\infty} = x^2
 \]
 \[
 	r_3 = x^2-1 \,\,\, , \,\,\, x_3 := \op{argmax}\limits_{x \in [-1,1]} |r_3(x)| = 0
 \]
 \[
-	\underline{q}_3(x) = \frac{r_3(x)}{r_3(x_3)} = 1 - x^2
+	q_3(x) = \frac{r_3(x)}{r_3(x_3)} = 1 - x^2
 \]
 \begin{center}
  \begin{tabular}{|c|c|c|c|c|}
@@ -229,7 +229,7 @@ Neben solchen a priori-Aussagen ist auch a posteriori-Fehlerkontrolle möglich.
 \begin{satz}[A posteriori-Fehlerschätzer für EI] \label{4.5}
 Seien $I_M, I_{M'}: C^0 (\bar{\Omega},\R) \rightarrow \op{span} (G)$ EI-Operatoren für $M' > M$, $Q_M \subset Q_{M'} = \{q_i\}_{i=1}^{M'}, T_M \subset T_{M'} = \{x_i\}_{i=1}^{M'}$.
 
-Sei $\underline{Q} := (\underline{q}_i(x_i))_{i,j=M+1}^{M'}$. Für $g \in G$ sei $\underline{g} := (g(x_i)) - I_M(g)(x_i))_{i=M+1}^{M'}$ und $\underline{\alpha}' := \{\alpha_i '\}_{i=M+1}^{M'} := \underline{Q}^{-1} \underline{g}'.$
+Sei $\underline{Q} := (q_i(x_i))_{i,j=M+1}^{M'}$. Für $g \in G$ sei $\underline{g'} := (g(x_i)) - I_M(g)(x_i))_{i=M+1}^{M'}$ und $\underline{\alpha}' := \{\alpha_i '\}_{i=M+1}^{M'} := \underline{Q}^{-1} \underline{g}'.$
 
 Falls $g \in \op{span}(Q_{M'}),$ so gelten folgende a posteriori-Fehlerschranken für den Interpolationsfehler:
 \begin{align*}
@@ -240,16 +240,16 @@ mit $K_Q := (\int\limits_{\Omega} q_i q_j)_{i,j=M+1}^{M'}$
 \begin{proof}
 Nach Def. der EI gilt
 \[
-	I_M(g) = \sum\limits_{i=1}^M \alpha_i \underline{q}_i \,\, , \,\, I_{M'}(g) = \sum\limits_{i=1}^{M'} \alpha_i ' \underline{q}_i
+	I_M(g) = \sum\limits_{i=1}^M \alpha_i q_i \,\, , \,\, I_{M'}(g) = \sum\limits_{i=1}^{M'} \alpha_i ' q_i
 \]
 mit $\underline{Q}_M \underline{\alpha}_M = \underline{g}_M$ und $\underline{Q}_{M'} \underline{\alpha}_{M'} = \underline{g}_{M'}$
 mit $\underline{\alpha}_M = (\alpha_i)_{i=1}^M, \underline{\alpha}_{M'} = (\alpha_i ')_{i=1}^{M'}$.
 
-Da $\underline{Q}_M$ oberer linker Block von $\underline{Q}_{M'}$ und $\underline{Q}$ unterer rechter Block von $\underline{Q}_{M'}$, und jeweils untere Dreiecksmatrizen gilt $\alpha_i = \alpha_i '$, $i=1,\dots,M$ und $g-I_M(g) = I_{M'}(g) - I_M(g) = \sum\limits_{i=M+1}^{M'} \alpha_i ' \underline{q}_i$
+Da $\underline{Q}_M$ oberer linker Block von $\underline{Q}_{M'}$ und $\underline{Q}$ unterer rechter Block von $\underline{Q}_{M'}$, und jeweils untere Dreiecksmatrizen gilt $\alpha_i = \alpha_i '$, $i=1,\dots,M$ und $g-I_M(g) = I_{M'}(g) - I_M(g) = \sum\limits_{i=M+1}^{M'} \alpha_i ' q_i$
 
-Für $L^{\infty}$-Norm folgt $||g-I_M(g)||_{\infty} \leq \sum\limits_{i=M+1}^{M'} | \alpha_i ' | \underbrace{||\underline{q}_i||_{\infty}}_{1} = ||\underline{\alpha}'||_1$
+Für $L^{\infty}$-Norm folgt $||g-I_M(g)||_{\infty} \leq \sum\limits_{i=M+1}^{M'} | \alpha_i ' | \underbrace{||q_i||_{\infty}}_{1} = ||\underline{\alpha}'||_1$
 
-Für $L^2$-Norm gilt $||g-I_M(g)||_{2} = \left(\sum\limits_{i,j=M+1}^{M'} \alpha_i ' \alpha_j ' \int\limits_{\bar{\Omega}} \underline{q}_i \underline{q}_j \right)^{\frac{1}{2}} = \Delta_{M,M',L^2}(g)$
+Für $L^2$-Norm gilt $||g-I_M(g)||_{2} = \left(\sum\limits_{i,j=M+1}^{M'} \alpha_i ' \alpha_j ' \int\limits_{\bar{\Omega}} q_i q_j \right)^{\frac{1}{2}} = \Delta_{M,M',L^2}(g)$
 \end{proof}
 \end{satz}
 
@@ -262,7 +262,7 @@ wg. Linearität folgt $f(\sum \beta_i g_i) = 0 \,\, \forall \, \beta_i \in \R, g
 \[
 	\Rightarrow f(g) = 0 \,\, \forall \, g \in \op{span}(G)
 \]
-Nach Konstruktion ist $Q_M \subseteq \op{span}(g)$, also $f(\underline{q}_i) = 0, i=1,\dots,M$, also auch $f(I_M(g)) = f(\sum \alpha_i \underline{q}_i) = 0 \,\, \forall \, g \in G$
+Nach Konstruktion ist $Q_M \subseteq \op{span}(g)$, also $f(q_i) = 0, i=1,\dots,M$, also auch $f(I_M(g)) = f(\sum \alpha_i q_i) = 0 \,\, \forall \, g \in G$
 \end{proof}
 \end{satz}
 
@@ -272,8 +272,14 @@ Nach Konstruktion ist $Q_M \subseteq \op{span}(g)$, also $f(\underline{q}_i) = 0
 		\item[-] Falls $g \in G$ haben Mittelwert $0$, d.\,h. $\int\limits_{\Omega} g(x) dx = 0 \,\, \forall \, g \in G$
 		
 		$\Rightarrow \int\limits_{\Omega} I_M(g) = 0 \,\, \forall \, g \in G.$
+		\item EI klappt im Prinzip auch für allgemeinere Funktionen, die nicht stetig sind, solange diese Punktauswertungen erlauben.
+		\item Reproduktionseigenschaft: Falls $g \in X_M \Rightarrow I_M(g) = g$.
+		\item Endliche Dimension wird detektiert: Falls $\dim(\op{span}(G)) = M_{max} < \infty$
+		
+		$\Rightarrow$ EI terminiert mit $M=M_{max}$ und $I_M(g) = g \,\, \forall \,\, g \in G$.
 	\end{itemize}
 \end{bem}
+
 
 \paragraph*{Anwendung in RB-Methoden}
 Falls eine Koeffizientenfunktion nicht separierbar parametrisch ist, erzeuge mittels EI eine separierbar parametrische Approximation.
@@ -293,7 +299,7 @@ Mit Komponenten $\{\tilde{f}^m\}_{m=1}^M$ und Koeffizienten $(\Theta^1(\mu), \do
 	\begin{itemize}
 		\item Analoge Vorgehensweise bei Ausgabefunktional oder Bilinearform möglich. Anschließend Offline/Online Zerlegung wie in §\ref{sec-3} realisierbar.
 		\item Fehlerschätzer aus §\ref{sec-3} sind mit EI  im Allgemeinen nicht rigoros, da der Interpolationsfehler zusätzlich berücksichtigt werden muss. Falls $g(\pdot;\mu) \in \op{span} (Q_M)$ (starke Annahme) so sind Schätzer weiterhin rigoros.
-		\item Falls Interpolatinosfehler $\neq 0$, aber Fehlerschätzer für EI vorhanden, so kann mittels eines Hilfsproblems (hochdimensionales interpoliertes Problem) $(\tilde{\p}(\mu))$ Fehlerkontrolle für das interpolierte und reduzierte Problem realisiert werden. (wir ignorieren wieder Ausgabe im Folgenden).
+		\item Falls Interpolationsfehler $\neq 0$, aber Fehlerschätzer für EI vorhanden, so kann mittels eines Hilfsproblems (hochdimensionales interpoliertes Problem) $(\tilde{\p}(\mu))$ Fehlerkontrolle für das interpolierte und reduzierte Problem realisiert werden. (wir ignorieren wieder Ausgabe im Folgenden).
 	\end{itemize}
 \end{bem}
 
@@ -319,16 +325,16 @@ für beliebige gewählten $X_N \subset X$.
 \begin{bem}[Beispiele für $\epsilon_a$, $\epsilon_f$, aus EI]
 Sie $X=H_0^1(\Omega)$ und $f(v) = \int_{\Omega} q(x) v(x) dx$ mit $q \in L^1(\Omega) \cap C^0(\Omega)$ und $q_M$ EI von $q$, damit $\tilde{f}(v) := \int_{\Omega} q_M(x)v(x) dx$
 \begin{align*}
-& \Rightarrow |f(v) - \tilde{f}(v)| = | \int_{\Omega} (q(x) - q_M(x)) v(x) dx | \overset{CS}{\leq} || q - q_M||_{L^2} \underbrace{||v||_{L^2}}_{\leq ||v||_{H_0^1}} \overset{\ref{4.5}}{\leq} \Delta_{\mu;\mu;2} (q) ||v|| \\
-& \Rightarrow \epsilon_f := \Delta_{\mu;\mu;2} (q) \text{ (bzw. Supremum über } \p \text{ falls } q \text{ parametrisch)}
+& \Rightarrow |f(v) - \tilde{f}(v)| = | \int_{\Omega} (q(x) - q_M(x)) v(x) dx | \overset{CS}{\leq} || q - q_M||_{L^2} \underbrace{||v||_{L^2}}_{\leq ||v||_{H_0^1}} \overset{\ref{4.5}}{\leq} \Delta_{M;M';2} (q) ||v|| \\
+& \Rightarrow \epsilon_f := \Delta_{M;M';2} (q) \text{ (bzw. Supremum über } \p \text{ falls } q \text{ parametrisch)}
 \end{align*}
-Sei z.\,B. $a(u,v) = \int_{\Omega} \kappa(x;\mu) u(x) v(x) dx$ mit $\kappa(x;\mu) \in C^0(\bar{\Omega})$ und $\kappa_{\mu}$ EI von $\kappa$
+Sei z.\,B. $a(u,v) = \int_{\Omega} \kappa(x;\mu) u(x) v(x) dx$ mit $\kappa(x;\mu) \in C^0(\bar{\Omega})$ und $\kappa_{M}$ EI von $\kappa$
 \[
-	\tilde{a}(u,v) = \int_{\Omega} \kappa_{\mu} (x;\mu) u(x) v(x) dx
+	\tilde{a}(u,v) = \int_{\Omega} \kappa_{M} (x;\mu) u(x) v(x) dx
 \]
 \begin{align*}
-	& \Rightarrow |a(u,v) - \tilde{a}(u,v) | \leq || \kappa - \kappa_{\mu}||_{\infty} \underbrace{|\int_{\Omega} u(x) v(x) dx|}_{\leq ||u||_{L^2} ||v||_{L^2}} \leq || u||_{H_0^1} ||v||_{H_0^1} \Delta_{\mu;\mu;\infty} (\kappa) \\
-	& \Rightarrow \epsilon_a := \sup\limits_{\mu \in \p} \Delta_{\mu;\mu;\infty} (\kappa(\pdot;\mu))
+	& \Rightarrow |a(u,v) - \tilde{a}(u,v) | \leq || \kappa - \kappa_{M}||_{\infty} \underbrace{|\int_{\Omega} u(x) v(x) dx|}_{\leq ||u||_{L^2} ||v||_{L^2}} \leq || u||_{H_0^1} ||v||_{H_0^1} \Delta_{M;M';\infty} (\kappa) \\
+	& \Rightarrow \epsilon_a := \sup\limits_{\mu \in \p} \Delta_{M;M';\infty} (\kappa(\pdot;\mu))
 \end{align*}
 \end{bem}
 
@@ -340,7 +346,7 @@ Falls $\epsilon_a$, $\epsilon_f$ genügend klein, sind $\tilde{a}$, $\tilde{f}$ 
 \end{align*}
 Falls $\epsilon_a < \alpha$ mit $\alpha$ Koerzivitätskonstante von $a(\pdot,\pdot)$, so folgt
 \[
-	\frac{\tilde{a}(u,u)}{||u||^2} = \frac{a(u,u)-(a(u,u) - \tilde{a}(u,u))}{||u||^2} \geq \underbrace{\frac{a(u,u)}{||u||^2}}_{\geq \alpha} - \underbrace{\frac{|\tilde{a}(u,u)|}{||u||^2}}_{\leq \epsilon_a} \geq \alpha - \epsilon_a > 0
+	\frac{\tilde{a}(u,u)}{||u||^2} = \frac{a(u,u)-(a(u,u) - \tilde{a}(u,u))}{||u||^2} \geq \underbrace{\frac{a(u,u)}{||u||^2}}_{\geq \alpha} - \underbrace{\frac{|a(u,u) - \tilde{a}(u,u)|}{||u||^2}}_{\leq \epsilon_a} \geq \alpha - \epsilon_a > 0
 \]
 also $\tilde{a}$ koerziv mit Koerzivitätskonstante $\tilde{\alpha} \geq \alpha - \epsilon_a$.
 \end{bem}
@@ -358,7 +364,7 @@ Für $||\tilde{u}||$ liefert Lax-Milgram
 \[
 	||\tilde{u}|| \leq \frac{||\tilde{f}||}{\tilde{\alpha}} \leq \frac{||\tilde{f}||}{\alpha - \epsilon_a}
 \]
-also insgesamt in \ref{eq:4.2}
+also insgesamt in (\ref{eq:4.2})
 \begin{align} \label{eq:4.3}
 	|| u - \tilde{u}|| \leq \frac{1}{\alpha} \epsilon_f + \frac{||\tilde{f}||}{\alpha(\alpha - \epsilon_a)} \epsilon_a =: \Delta_{EI}
 \end{align}
@@ -481,7 +487,7 @@ Solches $A$ existiert wegen Riesz: $a(u,\pdot) \in X'_2$ also existiert Riesz-Re
 \end{bem}
 
 \begin{satz}[Eigenwert für $\beta$/$\gamma$] \label{4.13}
-Seien $X_1$, $X_2$ Hilberträume, $a: X_1 \times X_2$ stetige Bilinearform mit $a(u,v) = \dotp{Au}{v}$ und $A$, $A^*$ komp. Operator d.h. $A \in K(X_1,X_2)$, $A^* \in L(X_2,X_1)$ und $\sigma := \sigma(A^*A)$ Spektrum von $A^*A$. Dann gilt:
+Seien $X_1$, $X_2$ Hilberträume, $a: X_1 \times X_2$ stetige Bilinearform mit $a(u,v) = \dotp{Au}{v}$ und $A$, $A^*$ kompakter Operator d.h. $A \in K(X_1,X_2)$, $A^* \in L(X_2,X_1)$ und $\sigma := \sigma(A^*A)$ Spektrum von $A^*A$. Dann gilt:
 \begin{enumerate}[i)]
 	\item $\forall \lambda \in \sigma$ ex. $u \in X_1$:
 	\[
@@ -502,18 +508,18 @@ Seien $X_1$, $X_2$ Hilberträume, $a: X_1 \times X_2$ stetige Bilinearform mit $
 \]
 und $\sigma = \{\lambda_i\}_{i \in I}$ oder $\sigma = \{\lambda_i\}_{i \in I} \cup \{0\}$
 
-Nach \ref{4.12} ii) $\beta = \inf\limits_{u \neq 0} \frac{||Au||}{||u||} = \inf\limits_{u \neq 0} \sqrt{\frac{||Au||^2}{||u||^2}} = \inf\limits_{||u|| = 1} \sqrt{\dotp{Au}{Au}} = \inf\limits_{||u||=1} \sqrt{\dotp{A^*Au}{A}}$
+Nach \ref{4.12} ii) $\beta = \inf\limits_{u \neq 0} \frac{||Au||}{||u||} = \inf\limits_{u \neq 0} \sqrt{\frac{||Au||^2}{||u||^2}} = \inf\limits_{||u|| = 1} \sqrt{\dotp{Au}{Au}} = \inf\limits_{||u||=1} \sqrt{\dotp{A^*Au}{u}}$
 \begin{align} \label{eq:4.4'}
 	\beta^2 = \inf\limits_{||u||=1} \dotp{A^*Au}{u} \tag{4.4'}
 \end{align}
-Falls $0 \in \sigma$ mit EV $\phi^0 \Rightarrow 0 \leq \beta^2 = \dotp{A^*A\phi^0}{\phi^0} = 0 \Rightarrow \beta^2 = 0 = \inf \sigma$.
+Falls $0 \in \sigma$ mit EV $\phi^0 \Rightarrow 0 \leq \beta^2 \leq \dotp{A^*A\phi^0}{\phi^0} = 0 \Rightarrow \beta^2 = 0 = \inf \sigma$.
 
 Falls $0 \not\in \sigma \Rightarrow \{\phi_i\}_{i \in I}$ ist vollständiges ONS von $X_1$
 \begin{align*}
 	&\Rightarrow \forall u \in X_1 \text{ mit } ||u||=1 \text{ ex. } u_i \in \R \text{ mit } u = \sum\limits_{i \in I} u_i \phi_i \, , \, \sum u_i^2 = 1 \\
-	&\overset{(\ref{eq:4.4'})}{\Rightarrow} \beta = \inf\limits_{||u||=1} \dotp{A^*Au}{u} = \inf\limits_{||u||=1} \sum \lambda_i u_i^2  \underbrace{\geq}_{\text{Konvexkombination}} \inf \{\lambda_i\} = \inf \sigma
+	&\overset{(\ref{eq:4.4'})}{\Rightarrow} \beta^2 = \inf\limits_{||u||=1} \dotp{A^*Au}{u} = \inf\limits_{||u||=1} \sum \lambda_i u_i^2  \underbrace{\geq}_{\text{Konvexkombination}} \inf \{\lambda_i\} = \inf \sigma
 \end{align*}
-und $\beta^2 = \inf\limits_{||u||=1} \sum \lambda_i u_i^2 \underbrace{\leq}_{u = \phi_j} \sum \lambda_i u_i^2 = \lambda_j \Rightarrow \beta^2 \leq \inf \{\lambda_i\} \Rightarrow \beta^2 = \inf \sigma$
+und $\beta^2 = \inf\limits_{||u||=1} \sum \lambda_i u_i^2 \underbrace{\leq}_{u := \phi_j} \sum \lambda_i u_i^2 = \lambda_j \Rightarrow \beta^2 \leq \inf \{\lambda_i\} \Rightarrow \beta^2 = \inf \sigma$
 \item analog zu ii)
 \end{enumerate}
 \end{proof}
@@ -527,7 +533,7 @@ Sei $X_1 = \R^m, X_2 = \R^n, A \in \R^{n \times m}$, $m \leq n$ und $a(u,v) := \
 \end{enumerate}
 \begin{proof}
 \begin{enumerate}[i)]
-	\item $a$ stetig und $A, A^T$ kompakter linearer Operator, da endlichdimensionale  Bilder. Mit \ref{4.13} folgt wegen $\sigma(A^TA) = \{\sigma_i^2\}_{i=1}^m : \beta^2 = \inf \sigma(A^TA) = \min\limits_{i=1,\dots,m} \{\sigma_i^2\}$. Weil $\beta \geq 0, \sigma_i \geq 2 \Rightarrow \beta = \min\limits_{i=1,\dots,m} (\sigma_i)$.
+	\item $a$ stetig und $A, A^T$ kompakter linearer Operator, da endlichdimensionale  Bilder. Mit \ref{4.13} folgt wegen $\sigma(A^TA) = \{\sigma_i^2\}_{i=1}^m : \beta^2 = \inf \sigma(A^TA) = \min\limits_{i=1,\dots,m} \{\sigma_i^2\}$. Weil $\beta \geq 0, \sigma_i \geq 0 \Rightarrow \beta = \min\limits_{i=1,\dots,m} (\sigma_i)$.
 	\item $a$ inf-sup-stabil $\iff \beta > 0 \overset{i)}{\iff} \sigma_i > 0 \,\, \forall \, i \iff A \text{ hat Rang } m \iff \text{ A hat vollen Spaltenrang.}$
 \end{enumerate}
 \end{proof}
@@ -536,7 +542,7 @@ Sei $X_1 = \R^m, X_2 = \R^n, A \in \R^{n \times m}$, $m \leq n$ und $a(u,v) := \
 RB-Methode folgt mit \emph{Petrov Galerkin-Projektion}
 
 \begin{defn}[$\prob, (P_N(\mu))$ für inf-sup stabilen Fall] \label{4.15}
-Sei $a: X_1 \times X_2 \times \p \rightarrow \R$ stetig param. Bilinearform, $a(\pdot,\pdot;\mu)$ inf-sup stabil mit $\beta(\mu)$ inf-sup Konstante $f(\pdot;\mu)$ stetig param. Linearform. Zu $\mu \in \p$ ist $u(ßmu) \in X_1$ Lösung des vollen Problems
+Sei $a: X_1 \times X_2 \times \p \rightarrow \R$ stetig param. Bilinearform, $a(\pdot,\pdot;\mu)$ inf-sup stabil mit $\beta(\mu)$ inf-sup Konstante $f(\pdot;\mu)$ stetig param. Linearform. Zu $\mu \in \p$ ist $u(\mu) \in X_1$ Lösung des vollen Problems
 \[
 	a(u(\mu),v;\mu) = f(v;\mu) \qquad \forall \,\, v \in X_2
 \]
@@ -553,7 +559,7 @@ Seien $X_{N,1} \subseteq X_1$, $X_{N,2} \subseteq X_2$ mit $N = \dim X_{N,1} = \
 			&s'_N(\mu) = l(u_N(\mu);\mu) - r(u_N^{du};\mu) \text{ mit } u_N^{du} \in X_{N,2}^{du} \text{ Lösung von} \label{eq:4.5} \\
 			&a(v, u_N^{du};\mu) = -l(v;\mu) \,\, \forall \,\, v \in X_{N,1}^{du} \text{ und dualen RB-Räumen } X_{N,1}^{du}, X_{N,2}^{du} \label{eq:4.6}
 		\end{align}
-		\item Wahl von $X_{N,1}, X_{N,2}$ ist nicht beliebig, sondern müssen geeignet gewählt werden, so dass $(P_N(\mu))$ gute Approximation liefert (wie in §\ref{sec-3}. Wähle $X_{N,2}$ s.\,d. $(P_N(\mu))$ möglichst stabil, d.\,h. möglichst große diskrete inf-sup Konstante.
+		\item Wahl von $X_{N,1}, X_{N,2}$ ist nicht beliebig, sondern müssen geeignet gewählt werden, so dass $(P_N(\mu))$ gute Approximation liefert (wie in §\ref{sec-3}. Wähle $X_{N,2}$ s.\,d. $(P_N(\mu))$ möglichst stabil, d.\,h. möglichst große diskrete inf-sup Konstante).
 	\end{itemize}
 \end{bem}
 
@@ -573,7 +579,7 @@ Satz 3.46 in NUMPDE14/15
 \end{satz}
 
 \begin{kor}[Wohlgestelltheit von $(P_N)$]
-Falls $a$ eine der Bedingungen aus \ref{4.16} erfüllt, dann hat ads PRoblem $(P_N(\mu))$ aus \ref{4.15} eindeutige Lösung $u_N(\mu) \in X_{N,1}$ mit
+Falls $a$ eine der Bedingungen aus \ref{4.16} erfüllt, dann hat das Problem $(P_N(\mu))$ aus \ref{4.15} eindeutige Lösung $u_N(\mu) \in X_{N,1}$ mit
 \[
 	||u_N(\mu)|| \leq \frac{||f||_{X'_2}}{\beta_N(\mu)}
 \]
@@ -612,7 +618,7 @@ Satz 3.55 in NUMPDE14/15
 \begin{satz}[A-posteriori Fehlerschätzer]
 Sei $\beta_{LB}(\mu) > 0$ untere Schranke für $\beta_N(\mu)$. Dann gilt
 \[
-	||u - u_N|| \leq \Delta_N (\mu) := \frac{||v_r}{\beta_{LB}}
+	||u - u_N|| \leq \Delta_N (\mu) := \frac{||v_r||}{\beta_{LB}}
 \]
 mit $v_r \in X'_2$ Riesz-Repräsentant des Residuums wie in §\ref{sec-3}.
 \begin{proof}
@@ -634,12 +640,12 @@ $u-u_N$ ist Lösung von $a(u-u_N,v) = r(v) \,\, \forall \,\, v \in X_2$, also fo
 			||u^{du} - u_N^{du}|| \leq \Delta_N^{du}(\mu) := \frac{||r^{du}||}{\beta{LB}^{du}}
 		\]
 		\[
-			|s - s'_N| \leq \Delta'_{N,s}(\mu) :0 \frac{||v_r|| \cdot ||v_r^{du}||}{\beta_{LB}(\mu)}
+			|s - s'_N| \leq \Delta'_{N,s}(\mu) := \frac{||v_r|| \cdot ||v_r^{du}||}{\beta_{LB}(\mu)}
 		\]
 		also multiplikativer Effekt erreicht.
 		\item Zusammenfassend: (fast) alle Aussagen aus §\ref{sec-3} gelten mit $\alpha_{LB}$ ersetzt durch $\beta_{LB}$, bzw. $\alpha$ durch $\beta$.
 		\item Offline-Online-Zerlegung folgt analog zu §\ref{sec-3}.
-		\item Einzig offene Punkte: Wahl von $X'_{N,2}$ und Bestimmung von $\beta_{LB}$. Das sind kritische Komponenten: Weil inf-sup Stabilität nicht auf Teilräume vererbt wird, kann $\beta_N(\mu)$ und damit $\beta_{LB}(\mu)$ beliebig klein, sogar Null werden.
+		\item Einzig offene Punkte: Wahl von $X_{N,2}$ und Bestimmung von $\beta_{LB}$. Das sind kritische Komponenten: Weil inf-sup Stabilität nicht auf Teilräume vererbt wird, kann $\beta_N(\mu)$ und damit $\beta_{LB}(\mu)$ beliebig klein, sogar Null werden.
 		
 		$\rightarrow$ singuläres red. System trotz $\beta(\mu) > 0$. Ziel ist daher Wahl von $X_{N,2}$ s.\,d. $\beta_N(\mu)$ möglichst groß uniform in $N$, d.\,h. Verhindern von $\lim\limits_{N \rightarrow \infty} \beta_N(\mu) \rightarrow 0$. Idealerweise Ziel:
 		\[
@@ -649,7 +655,7 @@ $u-u_N$ ist Lösung von $a(u-u_N,v) = r(v) \,\, \forall \,\, v \in X_2$, also fo
 \end{bem}
 
 \begin{satz}[Kriterium für $X_{N,2}$] \label{4.20}
-Sei $A(\mu)$ suprimierender Operator aus \ref{4.12}. Falls für alle $v \in X_{N,1}$ gilt, dass $A(\mu) \in X_{N,2}$, dann ist $a$ inf-sup stabil auf $X_{N,1} \times X_{N,2}$ mit $\beta_N(\mu) \geq \beta(\mu)$.
+Sei $A(\mu)$ suprimierender Operator aus \ref{4.12}. Falls für alle $v \in X_{N,1}$ gilt, dass $A(\mu)v \in X_{N,2}$, dann ist $a$ inf-sup stabil auf $X_{N,1} \times X_{N,2}$ mit $\beta_N(\mu) \geq \beta(\mu)$.
 \begin{proof}
 Übung.
 \end{proof}
@@ -659,7 +665,7 @@ Sei $A(\mu)$ suprimierender Operator aus \ref{4.12}. Falls für alle $v \in X_{N
 	\begin{itemize}
 		\item Sei $X_{N,1} = \op{span}\{\phi_1,\dots,\phi_N\}$. Wähle $X_{N,2} := \op{span} \{A(\mu) \phi_1,\dots,A(\mu)\phi_N\} \Rightarrow \dim X_{N,1} = \dim X_{N,2}$ wegen Injektivität von $A$.
 		
-		Wegen Linearität gilt: $\forall \,\, v \in X_{N,1} \Rightarrow A(\mu)v \in X_{N,2}$ also ideales RB-Verfahren gemäß \ref{4.20} erreicht.Aber $X_{N,2}$ ist $\mu$-abhängig. Dies stellt jedoch kein Problem dar, denn Offline-Online weiter möglich.
+		Wegen Linearität gilt: $\forall \,\, v \in X_{N,1} \Rightarrow A(\mu)v \in X_{N,2}$ also ideales RB-Verfahren gemäß \ref{4.20} erreicht. Aber $X_{N,2}$ ist $\mu$-abhängig. Dies stellt jedoch kein Problem dar, denn Offline-Online weiter möglich.
 		\item Petrov-Galerkin-System entspricht einem Galerkin-RB-System eines koerziven, symmetrischen Problems mit separierbar parametrischen Bilinearform $\tilde{a}$:
 		
 		Definiere $\tilde{a}(u,v;\mu) := \dotp{A(\mu)u}{A(\mu)v}_{X_2} \qquad \forall \,\, u,v \in X_1$
@@ -677,12 +683,12 @@ Sei $A(\mu)$ suprimierender Operator aus \ref{4.12}. Falls für alle $v \in X_{N
 		A_N \underline{u}_N = \underline{f}_N \text{ mit } (A_N)_{ij} &= a(\phi_j,\overline{\phi}_i) = a(\phi_j, A(\mu)\phi_i) \\
 		&= \dotp{A\phi_j}{A\phi_i} = \tilde{a} (\phi_j,\phi_i)
 		\end{align*}
-		also RB-Matrix für $\tilde{a}$. Analog $(\underline{f}_N)_i = f(\overline{\phi}_i;\mu) = f(A\phi_i) = \tilde{f}(\phi;\mu)$ mit $\tilde{f} := f \circ A$
+		also RB-Matrix für $\tilde{a}$. Analog $(\underline{f}_N)_i = f(\overline{\phi}_i;\mu) = f(A\phi_i) = \tilde{f}(\phi_i;\mu)$ mit $\tilde{f} := f \circ A$
 		\item Darstellung durch FEM-Matrizen: Seien $\underline{A}, K, \underline{\Phi_N}, \underline{f}$ die bekannten FEM-Matrizen/Vektoren aus §\ref{sec-3.3}.
 		
 		$A\phi_j$ ist Riesz-Repräsentant von $a(\phi_j,\pdot)$
 		
-		$\Rightarrow A\phi_j \in X_1$ hat FEM Koeff.-Vektor $K^{-1} (a(\phi_j \psi_i)_{i=1}^H = K^{-1} \underline{A} \underline{\phi_j}$
+		$\Rightarrow A\phi_j \in X_1$ hat FEM Koeff.-Vektor $K^{-1} (a(\phi_j \psi_i))_{i=1}^H = K^{-1} \underline{A} \underline{\phi_j}$
 		
 		$A_N= (\dotp{A\phi_j}{A\phi_i}_{i,j=1}^N = \underline{\Phi}_N^T \underline{A}^T K^{-1} \underline{A} \, \underline{\Phi}_N$
 		
@@ -704,7 +710,7 @@ Sei $A(\mu)$ suprimierender Operator aus \ref{4.12}. Falls für alle $v \in X_{N
 			\]
 			also
 			\begin{align*}
-				\underline{u}_N &= \arg\min_{\underline{v} \in \R^N} \underline{v}_r K \underline{v}_r = \arg\min_{\underline{v} \in \R^N} \arg\min_{\underline{v} \in \R^N} \dotp{v_r}{v_r}\\
+				\underline{u}_N &= \arg\min_{\underline{v} \in \R^N} \underline{v}_r K \underline{v}_r = \arg\min_{\underline{v} \in \R^N} \dotp{v_r}{v_r}\\
 				&= \arg\min_{v \in X_{N,1}} \norm{f(\pdot;\mu)-a(v,\pdot;\mu)}_{X_2'}^2
 			\end{align*}
 			also entspricht Wahl von $X_{N,2}$ via Suprimieren einem \emph{Minimum-Residuum Ansatz}.
@@ -730,7 +736,7 @@ Für Details zu Folgendem siehe: [HRSP07] Huynh, Rozza, Sen, Patera: A Successiv
 	Seien $C, D \subset \p$ endliche Teilmengen und $M_\alpha, M_+ \in \N$.
 	Definiere
 	\[
-		Y := \set{y = (y_1,\ldots,y_Q) \in \R^Q \;\Big|\; \exists u \in X \text{ mit } g_q = \frac{a^q(u,u)}{\norm{u}^2}, 1 \leq q \leq Q}
+		Y := \set{y = (y_1,\ldots,y_Q) \in \R^Q \;\Big|\; \exists u \in X \text{ mit } y_q = \frac{a^q(u,u)}{\norm{u}^2}, 1 \leq q \leq Q}
 	\]
 	Wir definieren eine Zielfunktion $J : \p \times \R^Q \to \R$
 	\[
